---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ??.09.2022
  Features:
    - Dock breathing light now changes colour dependent on mode.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 24.09.2022
  Features:
    - Docked spiders are now fully functional.
  Changes:
    - Now requires Factorio 1.1.69 or higher.
    - Better compatability with Spidertron Enhancements and Spidertron Patrols. (Thanks Xorimuth!)
    - Changed `Undock` button location.
  Bugfixes:
    - Fix possible crash when docked spider no longer exist after mod change.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 18.09.2022
  Features:
    - Space Spidertron now hides in another menu-simulation.
  Changes:
    - Space Spidertron recipe now uses Aeroframe Poles instead of Beryllium Plate. 
    - Less harsh compatability with Constructron Continued.
  Bugfixes:
    - Remove build-smoke during failed undocking attempt.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 15.09.2022
  Features:
    - Space Spidertron now slowly hovers instead of bopping up and down. (Thanks Xorimuth!)
    - Space Spidertron now hides in a menu-simulation.
  Changes:
    - Prevent Lex's Aircraft from being dockable.
    - Space Spidertron recipe now has more realistic ingredients.
    - Less harsh checks on which spiders are allowed to dock.
    - Compatability with Constructron-Continued.
  Bugfixes:
    - [SE] No longer changes all spider collision masks regardless of if it's blacklisted.
    - Space Spidertron can no longer travel far into `out-of-map` tiles. (Thanks Soggs!)
    - Fix catching too many things in Picker Dolly events.
    - Fix a possible CRC issue.