@@ -3,6 +3,9 @@
 -- update all existing docked spiders
 
 local spidertron_lib = require("lib.spidertron_lib")
+
+if not global.docks then return end
+
 global.docks = global.docks or {}
 global.spiders = global.spiders or {}
 
@@ -61,6 +64,13 @@ for unit_number, dock_data in pairs(global.docks) do
                         -- Keep a tag here so that if a player updates straight from 
                         -- < 1.0 to 1.1 then his docks can all be set to `passive` mode
                         dock_data.was_passive = true
+                    else
+                        error([[
+                            Could not create new docked-spider above dock!
+                            Spider: ]]..docked_name..[[
+                            Surface: ]]..dock.surface.name..[[
+                            Position: ]]..serpent.line(dock.position)..[[
+                        ]])
                     end
                 else
                     -- If the prototype no longer exists then we need to empty this dock's data
@@ -71,10 +81,24 @@ for unit_number, dock_data in pairs(global.docks) do
                 -- but has an spider docked with a serialized spider still in the data
                 -- I might be able to fix that if someone complains. But it shouldn't 
                 -- happen, so, meh.
+                error([[
+                    Somehow lost docked spider's serialized data!
+                    Surface: ]]..dock.surface.name..[[
+                    Position: ]]..serpent.line(dock.position)..[[
+                ]])
             end
         else
             -- This dock entity no longer exists. Odd.
-            table.insert(mark_for_deletion, unit_number)
+            if dock_data.occupied then
+                -- Player might lose a spider
+                error([[
+                    Somehow a track of a occupied dock entity!
+                    unit number: ]]..unit_number..[[
+                ]])
+            else
+                -- Don't really care if it wasnt occupied
+                table.insert(mark_for_deletion, unit_number)
+            end
         end
     end
 end
