@@ -3,6 +3,8 @@ Version: 1.1.0
 Date: ??.09.2022
   Features:
     - Dock breathing light now changes colour dependent on mode.
+  Changes:
+    - Harsher migration scrpts that ensures no spider is lost.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 24.09.2022
